--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMsLxygXFY94UAiTDoyooMP"
+      "authorship_tag": "ABX9TyNvdB1diuD0Z1mv6ukAuF0p"
     },
     "kernelspec": {
       "name": "python3",
@@ -325,7 +325,7 @@
         "id": "VDpEBCcrvM-j",
         "outputId": "6ef1bc58-5155-4456-d9c0-ed16392667a8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -333,6 +333,49 @@
           "text": [
             "Enter a character : 6\n",
             "Given Character  6 is a Digit\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "to find the largest among three integers"
+      ],
+      "metadata": {
+        "id": "eu3ZD_morKaC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"enter thee first integer\"))\n",
+        "n2=int(input(\"enter thee first integer\"))\n",
+        "n3=int(input(\"enter thee first integer\"))\n",
+        "if n>n2 and n>n3:\n",
+        "  print(\"{} is greatest among {} and {}\".format(n,n2,n3))\n",
+        "elif n2>n3:\n",
+        "  print(\"{} is greatest among {} and {}\".format(n2,n,n3))\n",
+        "else:\n",
+        "    print(\"{} is greatest among {} and {}\".format(n3,n,n2))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MO7A9tilrJ9T",
+        "outputId": "01a8ba43-a587-4ca4-9ea6-179853166760"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter thee first integer2\n",
+            "enter thee first integer3\n",
+            "enter thee first integer0\n",
+            "3 is greatest among 2 and 0\n"
           ]
         }
       ]
