--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvdB1diuD0Z1mv6ukAuF0p"
+      "authorship_tag": "ABX9TyNDd/KoJL3ULbEybBQzMiGj"
     },
     "kernelspec": {
       "name": "python3",
@@ -366,7 +366,7 @@
         "id": "MO7A9tilrJ9T",
         "outputId": "01a8ba43-a587-4ca4-9ea6-179853166760"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,6 +376,48 @@
             "enter thee first integer3\n",
             "enter thee first integer0\n",
             "3 is greatest among 2 and 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Write a program in Python to check if a number is binary?`"
+      ],
+      "metadata": {
+        "id": "EuOmNq5w1tge"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"enter the number\"))\n",
+        "n1=str(n)\n",
+        "for i in n1:\n",
+        "  if i=='0' or i=='1':\n",
+        "      continue\n",
+        "  else:\n",
+        "    print(\"it is not binary number\")\n",
+        "    break\n",
+        "else:\n",
+        "    print(\"it is binary number\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PofRKh1I1vn8",
+        "outputId": "9f25d954-7cba-488d-dfcb-aee542ca8daf"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number010101\n",
+            "it is binary number\n"
           ]
         }
       ]
