--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNDd/KoJL3ULbEybBQzMiGj"
+      "authorship_tag": "ABX9TyPzkdKxYrEN8QJhiuV2lvNO"
     },
     "kernelspec": {
       "name": "python3",
@@ -418,6 +418,49 @@
           "text": [
             "enter the number010101\n",
             "it is binary number\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Python program to replace the string space with a given character.`"
+      ],
+      "metadata": {
+        "id": "jzW5mt7i4Kad"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string=input(\"enter the string\")\n",
+        "char=input(\"enter the character you want to replace with space\")\n",
+        "s=\"\"\n",
+        "for i in string:\n",
+        "  if i==\" \":\n",
+        "    i=char\n",
+        "  s+=i\n",
+        "print(\"String after replacing spaces with\", char+ \":\", s)\n",
+        "\n",
+        "  "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NU6C8Ug44Net",
+        "outputId": "b74be12e-3d5c-4efd-ffc2-c99f2f342371"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the stringh me\n",
+            "enter the character you want to replace with spaceo\n",
+            "String after replacing spaces with o: home\n"
           ]
         }
       ]
