--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzkdKxYrEN8QJhiuV2lvNO"
+      "authorship_tag": "ABX9TyOgOQ8zixkVIlPbbn44WTUa"
     },
     "kernelspec": {
       "name": "python3",
@@ -453,6 +453,44 @@
         "outputId": "b74be12e-3d5c-4efd-ffc2-c99f2f342371"
       },
       "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the stringh me\n",
+            "enter the character you want to replace with spaceo\n",
+            "String after replacing spaces with o: home\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Python program to replace the string space with a given character using replace() method.`"
+      ],
+      "metadata": {
+        "id": "SXy6_Znh8-To"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string=input(\"enter the string\")\n",
+        "char=input(\"enter the character you want to replace with space\")\n",
+        "for i in string:\n",
+        "  string.replace(i,\" \")\n",
+        "print(\"String after replacing spaces with\", char+ \":\", s)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EWLdp2U59CYJ",
+        "outputId": "fc916cbd-4d1b-4e42-877c-44382f8cca0b"
+      },
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
