--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgOQ8zixkVIlPbbn44WTUa"
+      "authorship_tag": "ABX9TyPCaAUJmZn3I+k+SLp5KcVm"
     },
     "kernelspec": {
       "name": "python3",
@@ -410,7 +410,7 @@
         "id": "PofRKh1I1vn8",
         "outputId": "9f25d954-7cba-488d-dfcb-aee542ca8daf"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -452,7 +452,7 @@
         "id": "NU6C8Ug44Net",
         "outputId": "b74be12e-3d5c-4efd-ffc2-c99f2f342371"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -490,7 +490,7 @@
         "id": "EWLdp2U59CYJ",
         "outputId": "fc916cbd-4d1b-4e42-877c-44382f8cca0b"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -502,6 +502,69 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Write a program in Python to remove duplicate elements from array.`"
+      ],
+      "metadata": {
+        "id": "czk83Eyxz6Bj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"enter the size of the array\"))\n",
+        "l=[]\n",
+        "l1=[]\n",
+        "l2=[]\n",
+        "for i in range(n):\n",
+        "  num=int(input(\"enter the numbers to add in the array\"))\n",
+        "  l.append(num)\n",
+        "for k in l:\n",
+        "  for j in l1:\n",
+        "      if j[0]==k:\n",
+        "         break\n",
+        "  else:\n",
+        "        l1.append([k,1])\n",
+        "for val in l1:\n",
+        "       l2.append(val[0])\n",
+        "print(\"elements in the array after removing the duplicates\",l2)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VF1_ysF3z-QE",
+        "outputId": "087a09ea-79f6-43d4-eb18-269d8eae7a9f"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the size of the array5\n",
+            "enter the numbers to add in the array2\n",
+            "enter the numbers to add in the array3\n",
+            "enter the numbers to add in the array4\n",
+            "enter the numbers to add in the array5\n",
+            "enter the numbers to add in the array4\n",
+            "elements in the array after removing the duplicates [2, 3, 4, 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dhdpnzgz6-Fb"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
