--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCaAUJmZn3I+k+SLp5KcVm"
+      "authorship_tag": "ABX9TyMTaddEXxpHOmpM3zYq9lZc"
     },
     "kernelspec": {
       "name": "python3",
@@ -540,7 +540,7 @@
         "id": "VF1_ysF3z-QE",
         "outputId": "087a09ea-79f6-43d4-eb18-269d8eae7a9f"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -558,13 +558,48 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "` calculate the sum of numbers from 1 to the given input n using recursion`\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "dhdpnzgz6-Fb"
+        "id": "l3x50fT59iwN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sum_digits(n):\n",
+        "  n1=n\n",
+        "  if(n1==0 or n1==1):\n",
+        "    return n1\n",
+        "  else:\n",
+        "    return (n1+sum_digits(n1-1))\n",
+        "n=int(input(\"enter range\"))\n",
+        "sum=sum_digits(n)\n",
+        "print(\"sum of digits\",sum)"
+      ],
+      "metadata": {
+        "id": "dhdpnzgz6-Fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "655a3cc4-015c-4206-ff81-146daf010bbc"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter range7\n",
+            "sum of digits 28\n"
+          ]
+        }
+      ]
     }
   ]
 }
