--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMTaddEXxpHOmpM3zYq9lZc"
+      "authorship_tag": "ABX9TyP1aWVCzwA6qsb4ZMuLFFXa",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/fathimar33/python_programs/blob/main/python1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -597,6 +608,47 @@
           "text": [
             "enter range7\n",
             "sum of digits 28\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Write a program in Python to find sum of digits of a number using recursion?`"
+      ],
+      "metadata": {
+        "id": "vEkGlrS1E2F8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sum_digits(n):\n",
+        "  if(n<9):\n",
+        "    return n\n",
+        "  else:\n",
+        "    if(n>0):\n",
+        "      return n%10+sum_digits(n//10)\n",
+        "n=int(input(\"enter number\"))\n",
+        "sum=sum_digits(n)\n",
+        "print(\"sum of digits of a number\",sum)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6mDDfhdqE8ho",
+        "outputId": "24c29542-04f0-43eb-d7d3-372421f71dd4"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter number1234\n",
+            "sum of digits of a number 10\n"
           ]
         }
       ]
