--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1aWVCzwA6qsb4ZMuLFFXa",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMA2E3vP/lYtICVSVZtjVj6"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/fathimar33/python_programs/blob/main/python1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -600,7 +589,7 @@
         },
         "outputId": "655a3cc4-015c-4206-ff81-146daf010bbc"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -641,7 +630,7 @@
         "id": "6mDDfhdqE8ho",
         "outputId": "24c29542-04f0-43eb-d7d3-372421f71dd4"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -652,6 +641,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KWG6XEGgF86i"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
