--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMA2E3vP/lYtICVSVZtjVj6"
+      "authorship_tag": "ABX9TyPK5VXa6Ra+b6g250XhWsBY"
     },
     "kernelspec": {
       "name": "python3",
@@ -643,13 +643,39 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "`Python program to convert lowercase char to uppercase of string.`"
+      ],
       "metadata": {
-        "id": "KWG6XEGgF86i"
+        "id": "_YOMwXvDG6kK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string=input(\"enter the string\")\n",
+        "string1=string.upper()\n",
+        "print(string1)"
+      ],
+      "metadata": {
+        "id": "KWG6XEGgF86i",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e88b4770-1a00-4bcd-b82f-b03a08c3f76a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the stringFunnY\n",
+            "FUNNY\n"
+          ]
+        }
+      ]
     }
   ]
 }
