--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPK5VXa6Ra+b6g250XhWsBY"
+      "authorship_tag": "ABX9TyPjHc7KFI9EMkG1SWlJgpGu"
     },
     "kernelspec": {
       "name": "python3",
@@ -665,7 +665,7 @@
         },
         "outputId": "e88b4770-1a00-4bcd-b82f-b03a08c3f76a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,6 +673,55 @@
           "text": [
             "enter the stringFunnY\n",
             "FUNNY\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Python program to print array in reverse Order.`"
+      ],
+      "metadata": {
+        "id": "KEUwalCRIL2c"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"enterthe size of the array\"))\n",
+        "l=[]\n",
+        "l1=[]\n",
+        "for i in range(n):\n",
+        "  num=int(input(\"enter the numbers to add in the array\"))\n",
+        "  l.append(num)\n",
+        "last_index=n-1\n",
+        "while(last_index>=0):\n",
+        "  l1.append(l[last_index])\n",
+        "  last_index-=1\n",
+        "print(\"after reverse\",l1)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "mbOa6yLQIO1I",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "64c6a412-217f-486c-8dde-7ab6c967125b"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enterthe size of the array5\n",
+            "enter the numbers to add in the array4\n",
+            "enter the numbers to add in the array3\n",
+            "enter the numbers to add in the array4\n",
+            "enter the numbers to add in the array3\n",
+            "enter the numbers to add in the array2\n",
+            "after reverse [2, 3, 4, 3, 4]\n"
           ]
         }
       ]
