--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPjHc7KFI9EMkG1SWlJgpGu"
+      "authorship_tag": "ABX9TyNsf36qoFRhBHcQOwVh+IQd"
     },
     "kernelspec": {
       "name": "python3",
@@ -722,6 +722,43 @@
             "enter the numbers to add in the array3\n",
             "enter the numbers to add in the array2\n",
             "after reverse [2, 3, 4, 3, 4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#alternative way:\n",
+        "n=int(input(\"enterthe size of the array\"))\n",
+        "l=[]\n",
+        "l1=[]\n",
+        "for i in range(n):\n",
+        "  num=int(input(\"enter the numbers to add in the array\"))\n",
+        "  l.append(num)\n",
+        "l.reverse()\n",
+        "print(\"after reverse\",l)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yozPDro6VEWg",
+        "outputId": "0c88d570-9f06-43f9-dba1-0fdb1b9c5bd0"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enterthe size of the array5\n",
+            "enter the numbers to add in the array1\n",
+            "enter the numbers to add in the array2\n",
+            "enter the numbers to add in the array3\n",
+            "enter the numbers to add in the array4\n",
+            "enter the numbers to add in the array5\n",
+            "after reverse [5, 4, 3, 2, 1]\n"
           ]
         }
       ]
