--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNsf36qoFRhBHcQOwVh+IQd"
+      "authorship_tag": "ABX9TyPF0pw4DtPcfroyEk+VBjqQ"
     },
     "kernelspec": {
       "name": "python3",
@@ -709,7 +709,7 @@
         },
         "outputId": "64c6a412-217f-486c-8dde-7ab6c967125b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -746,7 +746,7 @@
         "id": "yozPDro6VEWg",
         "outputId": "0c88d570-9f06-43f9-dba1-0fdb1b9c5bd0"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -759,6 +759,56 @@
             "enter the numbers to add in the array4\n",
             "enter the numbers to add in the array5\n",
             "after reverse [5, 4, 3, 2, 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Write a program in Python to swap two numbers without using third variable?\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "f7zKJqPqPvHA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l=[]\n",
+        "a=int(input(\"enter number1\"))\n",
+        "l.append(a)\n",
+        "b=int(input(\"enter number2\"))\n",
+        "l.append(b)\n",
+        "l.reverse()\n",
+        "b=l[1]\n",
+        "a=l[0]\n",
+        "print(\"a is {}\".format(a))\n",
+        "print(\"b is {}\".format(b))\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cETt2gFGPys2",
+        "outputId": "476aa038-194c-4690-a242-1f2f3c7e8990"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter number14\n",
+            "enter number25\n",
+            "a is 5\n",
+            "b is 4\n"
           ]
         }
       ]
