--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPF0pw4DtPcfroyEk+VBjqQ"
+      "authorship_tag": "ABX9TyNAZXfGGlKFuzF35y7GMRD6"
     },
     "kernelspec": {
       "name": "python3",
@@ -809,6 +809,47 @@
             "enter number25\n",
             "a is 5\n",
             "b is 4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Write a program in Python to swap two numbers using third variable?`"
+      ],
+      "metadata": {
+        "id": "k2v0HBVSSVqz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=int(input(\"enter number1\"))\n",
+        "b=int(input(\"enter number2\"))\n",
+        "c=a\n",
+        "a=b\n",
+        "b=c\n",
+        "print(\"a is {}\".format(a))\n",
+        "print(\"b is {}\".format(b))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q-BudOd7SZuq",
+        "outputId": "adc3c99e-2326-41a2-89d5-ee1c7d65e900"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter number15\n",
+            "enter number24\n",
+            "a is 4\n",
+            "b is 5\n"
           ]
         }
       ]
