--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNAZXfGGlKFuzF35y7GMRD6"
+      "authorship_tag": "ABX9TyN7wR0kXNujl9dWdVv8Nwvo"
     },
     "kernelspec": {
       "name": "python3",
@@ -850,6 +850,87 @@
             "enter number24\n",
             "a is 4\n",
             "b is 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Convert Lowercase vowels to Uppercase by not using replace() method`"
+      ],
+      "metadata": {
+        "id": "oyTMXw0dTF__"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string=input(\"enter the string to check\")\n",
+        "vowel=[\"a\",\"e\",\"i\",\"o\",\"u\"]\n",
+        "s=\"\"\n",
+        "for char in string:\n",
+        "  if char in vowel:\n",
+        "    char1=char.upper()\n",
+        "    s+=char1\n",
+        "  else:\n",
+        "    s+=char\n",
+        "print(s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "93RWRUJ509N-",
+        "outputId": "7527be94-a4e6-4d4b-f23d-ff49a817b1be"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the string to checkhome\n",
+            "hOmE\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Convert Lowercase vowels to Uppercase by  using replace() method`"
+      ],
+      "metadata": {
+        "id": "dmNG_xee2eds"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string=input(\"enter the string to check\")\n",
+        "vowel=[\"a\",\"e\",\"i\",\"o\",\"u\"]\n",
+        "for char in string:\n",
+        "  if char in vowel:\n",
+        "    char1=char.upper()\n",
+        "    string=string.replace(char,char1)\n",
+        "print(string)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E3xoO9bo2jRo",
+        "outputId": "fc1342cd-349d-4a57-b7e9-72c5b0667cfb"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the string to checkhome\n",
+            "hOmE\n"
           ]
         }
       ]
