--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7wR0kXNujl9dWdVv8Nwvo"
+      "authorship_tag": "ABX9TyPu2cdrUHb5Gl+JwrfFu/g8"
     },
     "kernelspec": {
       "name": "python3",
@@ -921,9 +921,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E3xoO9bo2jRo",
-        "outputId": "fc1342cd-349d-4a57-b7e9-72c5b0667cfb"
+        "outputId": "9227b346-cbd1-4075-d73f-e816d7568f59"
       },
-      "execution_count": 15,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -931,6 +931,52 @@
           "text": [
             "enter the string to checkhome\n",
             "hOmE\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python program to delete vowels in a given string.\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ASF-zgoQ4R7a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string=input(\"enter the string to check\")\n",
+        "vowel=[\"a\",\"e\",\"i\",\"o\",\"u\"]\n",
+        "s=\"\"\n",
+        "for char in string:\n",
+        "  if char in vowel:\n",
+        "    continue\n",
+        "  else:\n",
+        "    s+=char\n",
+        "print(s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AZLNQg0C4eY_",
+        "outputId": "43c0197f-a5fa-43b9-b01b-85ae4066d8da"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the string to checkhome\n",
+            "hm\n"
           ]
         }
       ]
