--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPu2cdrUHb5Gl+JwrfFu/g8"
+      "authorship_tag": "ABX9TyMdnnbn1QZZqjcTn4VDvKbJ"
     },
     "kernelspec": {
       "name": "python3",
@@ -977,6 +977,91 @@
           "text": [
             "enter the string to checkhome\n",
             "hm\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Python Program to calculate length of an array using length fuction`"
+      ],
+      "metadata": {
+        "id": "xfU9HMwx594e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"enter the size of the array\"))\n",
+        "l=[]\n",
+        "for i in range(n):\n",
+        "  num=int(input(\"enter the numbers to add in the array\"))\n",
+        "  l.append(num)\n",
+        "print(\"length of the array is\",len(l))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I16lWDHX6AlQ",
+        "outputId": "4d3b84b4-ccf3-4356-c8f4-ddb954d887ad"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the size of the array3\n",
+            "enter the numbers to add in the array1\n",
+            "enter the numbers to add in the array2\n",
+            "enter the numbers to add in the array3\n",
+            "length of the array is 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Python Program to calculate length of an array by not using length fuction`"
+      ],
+      "metadata": {
+        "id": "ZdADP14d7DQ-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"enter the size of the array\"))\n",
+        "l=[]\n",
+        "for i in range(n):\n",
+        "  num=int(input(\"enter the numbers to add in the array\"))\n",
+        "  l.append(num)\n",
+        "count=0\n",
+        "for j in l:\n",
+        "  count+=1\n",
+        "print(\"length of the array is\",count)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Utsl4HOW7KSM",
+        "outputId": "cd3d53bc-b9be-426a-c075-3a58551732e5"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the size of the array3\n",
+            "enter the numbers to add in the array1\n",
+            "enter the numbers to add in the array2\n",
+            "enter the numbers to add in the array3\n",
+            "length of the array is 3\n"
           ]
         }
       ]
