--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdnnbn1QZZqjcTn4VDvKbJ"
+      "authorship_tag": "ABX9TyOpovi+oCwu33Vn3RzJLBIQ"
     },
     "kernelspec": {
       "name": "python3",
@@ -799,7 +799,7 @@
         "id": "cETt2gFGPys2",
         "outputId": "476aa038-194c-4690-a242-1f2f3c7e8990"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -840,7 +840,7 @@
         "id": "Q-BudOd7SZuq",
         "outputId": "adc3c99e-2326-41a2-89d5-ee1c7d65e900"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -884,7 +884,7 @@
         "id": "93RWRUJ509N-",
         "outputId": "7527be94-a4e6-4d4b-f23d-ff49a817b1be"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -923,7 +923,7 @@
         "id": "E3xoO9bo2jRo",
         "outputId": "9227b346-cbd1-4075-d73f-e816d7568f59"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -969,7 +969,7 @@
         "id": "AZLNQg0C4eY_",
         "outputId": "43c0197f-a5fa-43b9-b01b-85ae4066d8da"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1007,7 +1007,7 @@
         "id": "I16lWDHX6AlQ",
         "outputId": "4d3b84b4-ccf3-4356-c8f4-ddb954d887ad"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1051,7 +1051,7 @@
         "id": "Utsl4HOW7KSM",
         "outputId": "cd3d53bc-b9be-426a-c075-3a58551732e5"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1065,6 +1065,63 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "writea python program to finbd the prime factors of a number"
+      ],
+      "metadata": {
+        "id": "Do7jqT-6c7BK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input(\"Enter the number: \"))\n",
+        "l = []\n",
+        "l2 = []\n",
+        "\n",
+        "for i in range(1, n + 1):\n",
+        "    if n % i == 0:\n",
+        "        l.append(i)\n",
+        "print(\"Factors:\", l)\n",
+        "for j in l:\n",
+        "    for k in range(2, j):\n",
+        "        if j % k == 0:\n",
+        "            break\n",
+        "    else:\n",
+        "        l2.append(j)\n",
+        "print(\"Prime factors:\", l2)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0WCJhfJQc6f3",
+        "outputId": "0c4465d5-d9f2-4ba1-efbc-8cf84b863ffb"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number: 24\n",
+            "Factors: [1, 2, 3, 4, 6, 8, 12, 24]\n",
+            "Prime factors: [1, 2, 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JaYjzfWMeJXH"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
