--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOpovi+oCwu33Vn3RzJLBIQ"
+      "authorship_tag": "ABX9TyP356NtYJKsQfSheSCJgUfm"
     },
     "kernelspec": {
       "name": "python3",
@@ -1101,7 +1101,7 @@
         "id": "0WCJhfJQc6f3",
         "outputId": "0c4465d5-d9f2-4ba1-efbc-8cf84b863ffb"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1115,10 +1115,54 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Python program to count the Occurrence Of Vowels & Consonants in a String."
+      ],
+      "metadata": {
+        "id": "B4A9qE9KOFjG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string=input(\"enter the string\")\n",
+        "count_v=0\n",
+        "count_c=0\n",
+        "for char in string:\n",
+        "  if char in[\"a\",\"e\",\"i\",\"o\",\"u\"]:\n",
+        "    count_v+=1\n",
+        "  else:\n",
+        "    count_c+=1\n",
+        "print(\"number of vowels in string\",count_v)\n",
+        "print(\"number of consonant in string\",count_c)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "JaYjzfWMeJXH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eb7fcd08-8f3f-4e53-e1e4-06dd04ce4cf0"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the stringhome\n",
+            "number of vowels in string 2\n",
+            "number of consonant in string 2\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "JaYjzfWMeJXH"
+        "id": "R-IACO9kUZ3b"
       },
       "execution_count": null,
       "outputs": []
