--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP356NtYJKsQfSheSCJgUfm"
+      "authorship_tag": "ABX9TyMVi0P58AO7p6DYIzX9Hj9n"
     },
     "kernelspec": {
       "name": "python3",
@@ -1145,7 +1145,7 @@
         },
         "outputId": "eb7fcd08-8f3f-4e53-e1e4-06dd04ce4cf0"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1159,13 +1159,43 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "`Write a program in Python to add two integer without using arithmetic operator?`"
+      ],
       "metadata": {
-        "id": "R-IACO9kUZ3b"
+        "id": "Ddf9ru4i5yNZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n1=int(input(\"enter the first integer\"))\n",
+        "n2=int(input(\"enter the second integer\"))\n",
+        "l=[]\n",
+        "l.append(n1)\n",
+        "l.append(n2)\n",
+        "print(\"sum of two integers\",sum(l)) "
+      ],
+      "metadata": {
+        "id": "R-IACO9kUZ3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f400f72e-9ff8-4712-97dc-6adb4e955797"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the first integer5\n",
+            "enter the second integer99\n",
+            "sum of two integers 104\n"
+          ]
+        }
+      ]
     }
   ]
 }
