--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVi0P58AO7p6DYIzX9Hj9n"
+      "authorship_tag": "ABX9TyONRPOufjuYCk8USX1++2PX",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/fathimar33/python_programs/blob/main/python1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -1193,6 +1204,56 @@
             "enter the first integer5\n",
             "enter the second integer99\n",
             "sum of two integers 104\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Python program to print the highest frequency character in a String.`"
+      ],
+      "metadata": {
+        "id": "E3BR6ZNT-tXN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string=input(\"enter the string\")\n",
+        "l=[]\n",
+        "l2=[]\n",
+        "for char in string:\n",
+        "  for j in l:\n",
+        "    if char==j[0]:\n",
+        "      j[1]+=1\n",
+        "      break\n",
+        "  else:\n",
+        "      l.append([char,1])\n",
+        "print(l)\n",
+        "for k in l:\n",
+        "   l2.append(k[1])\n",
+        "n=max(l2)\n",
+        "for m in l:\n",
+        "    if m[1]==n:\n",
+        "      print(\"Highest frequency character \",m,end=\" \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xqzZq6m7-wjE",
+        "outputId": "d2ac9670-6208-42f2-d8f4-b4f71a56707d"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the stringhello world\n",
+            "[['h', 1], ['e', 1], ['l', 3], ['o', 2], [' ', 1], ['w', 1], ['r', 1], ['d', 1]]\n",
+            "Highest frequency character  ['l', 3] "
           ]
         }
       ]
