--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONRPOufjuYCk8USX1++2PX",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyONRPOufjuYCk8USX1++2PX"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/fathimar33/python_programs/blob/main/python1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -1195,7 +1184,7 @@
         },
         "outputId": "f400f72e-9ff8-4712-97dc-6adb4e955797"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1245,7 +1234,7 @@
         "id": "xqzZq6m7-wjE",
         "outputId": "d2ac9670-6208-42f2-d8f4-b4f71a56707d"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
