--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONRPOufjuYCk8USX1++2PX"
+      "authorship_tag": "ABX9TyOfQFB0lBG4zungs2R2mYys"
     },
     "kernelspec": {
       "name": "python3",
@@ -1243,6 +1243,42 @@
             "enter the stringhello world\n",
             "[['h', 1], ['e', 1], ['l', 3], ['o', 2], [' ', 1], ['w', 1], ['r', 1], ['d', 1]]\n",
             "Highest frequency character  ['l', 3] "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`write a program to insert integer in particular position`"
+      ],
+      "metadata": {
+        "id": "IwudtptbNMOq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=[1,5,6,7]\n",
+        "n=int(input(\"enter the number you want to add\"))\n",
+        "a.insert(3,n)\n",
+        "print(\"the list is\",a)"
+      ],
+      "metadata": {
+        "id": "now5_KhzLU0p",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "96d88343-07d0-4fa2-9085-a11280216e4f"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number you want to add99\n",
+            "the list is [1, 5, 6, 99, 7]\n"
           ]
         }
       ]
