--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOfQFB0lBG4zungs2R2mYys"
+      "authorship_tag": "ABX9TyPWU+4UO/4nmUP+dTS8iU7X"
     },
     "kernelspec": {
       "name": "python3",
@@ -1271,7 +1271,7 @@
         },
         "outputId": "96d88343-07d0-4fa2-9085-a11280216e4f"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1279,6 +1279,53 @@
           "text": [
             "enter the number you want to add99\n",
             "the list is [1, 5, 6, 99, 7]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Python Program to find factors using recursion.`"
+      ],
+      "metadata": {
+        "id": "R15tVH84oDNe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fact(i, l, n):\n",
+        "    if n == 1:\n",
+        "        l.append(n)\n",
+        "        return l\n",
+        "    if i > n:\n",
+        "        return l\n",
+        "    if n % i == 0:\n",
+        "        l.append(i)\n",
+        "    fact(i + 1, l, n)\n",
+        "\n",
+        "i = 1\n",
+        "l = []\n",
+        "n = int(input(\"Enter the number: \"))\n",
+        "fact(i, l, n)\n",
+        "print(f\"The factors of {n} are {l}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hcaBuaitoIIe",
+        "outputId": "213a4179-f786-4e04-8273-033c4bf22cc3"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number: 24\n",
+            "The factors of 24 are [1, 2, 3, 4, 6, 8, 12, 24]\n"
           ]
         }
       ]
