--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWU+4UO/4nmUP+dTS8iU7X"
+      "authorship_tag": "ABX9TyMV5sQ+kYAI9cokyf932EA6"
     },
     "kernelspec": {
       "name": "python3",
@@ -1318,7 +1318,7 @@
         "id": "hcaBuaitoIIe",
         "outputId": "213a4179-f786-4e04-8273-033c4bf22cc3"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1329,6 +1329,65 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Write a program in Python to find given number is perfect or not?`"
+      ],
+      "metadata": {
+        "id": "FLySLdke5LcP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fact(i, l, n):\n",
+        "    if n == 1:\n",
+        "        l.append(n)\n",
+        "        return l\n",
+        "    if i >= n:\n",
+        "        return l\n",
+        "    if n % i == 0:\n",
+        "        l.append(i)\n",
+        "    return fact(i + 1, l, n)\n",
+        "\n",
+        "i = 1\n",
+        "l = []\n",
+        "n = int(input(\"Enter the number: \"))\n",
+        "factors=fact(i, l, n)\n",
+        "if sum(factors)==n:\n",
+        "  print(f\"{n} is perfect\")\n",
+        "else:\n",
+        "  print(f\"{n} is not perfect\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zS7mPyck5Ej1",
+        "outputId": "fdcce3ed-6f1a-4730-e9e1-5f9f7a82f646"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number: 28\n",
+            "28 is perfect\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "SDMP9jI_6oQE"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
