--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMV5sQ+kYAI9cokyf932EA6"
+      "authorship_tag": "ABX9TyMTOm/0RhYW8TseBV6lIZTn",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/fathimar33/python_programs/blob/main/python1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -1368,7 +1379,7 @@
         "id": "zS7mPyck5Ej1",
         "outputId": "fdcce3ed-6f1a-4730-e9e1-5f9f7a82f646"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1381,13 +1392,48 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "`Python Program to find the Average of numbers`"
+      ],
       "metadata": {
-        "id": "SDMP9jI_6oQE"
+        "id": "OPbORinp7VGT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num=int(input(\"enter how many numbers\"))\n",
+        "l=[]\n",
+        "for i in range(num):\n",
+        "  n=float(input(\"enter the number\"))\n",
+        "  l.append(n)\n",
+        "import numpy as np\n",
+        "print(f\"average is {np.mean(l)}\")\n",
+        "\n",
+        "  "
+      ],
+      "metadata": {
+        "id": "SDMP9jI_6oQE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "212b0032-5fd8-4bd4-e1bf-b2de4f50487d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter how many numbers3\n",
+            "enter the number3\n",
+            "enter the number3\n",
+            "enter the number3\n",
+            "average is 3.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
